feat: support unified GC/VM source annotations and canonicalization